BUGFIX: Prevent scrollbar when advanced section is collapsed

--- a/packages/neos-ui-link-editor-core/src/application/Dialog/style.module.css
+++ b/packages/neos-ui-link-editor-core/src/application/Dialog/style.module.css
@@ -7,7 +7,6 @@
 
 .advancedButton {
     color: var(--colors-ContrastBrightest);
-    height: var(--spacing-GoldenUnit);
     padding: 0 var(--spacing-Full);
     vertical-align: middle;
     cursor: pointer;
